--- a/ux.html
+++ b/ux.html
@@ -107,7 +107,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/govirtuo/6bf921cf-1f69-45c8-94e5-09a3fe0e29ad'>Virtuo - UX designer (H/F)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/govirtuo/6bf921cf-1f69-45c8-94e5-09a3fe0e29ad'>Virtuo - UX designer (H/F)</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -139,11 +139,11 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/259998-ux-designer-w-m-d'>Job @ Westphalia DataLab  (M?nster): UX Designer (... | JOIN</a></h5> 
+<h5><a href='https://westphalia-datalab.join.com/jobs/259998-ux-designer-w-m-d'>Job @ Westphalia DataLab  (M?nster): UX Designer (... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/praxis-engineering/job/oBeDafwm'>Praxis Engineering Careers - UI/UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -246,7 +246,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/odHM7fwx'>Farfetch Careers - Senior UI/UX Product Designer</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -262,7 +262,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseking.recruitee.com/o/lead-ui-ux-designer-mwd-berlin'>
       Lead UI / UX Designer (m/w/d) - Caseking GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
@@ -330,7 +330,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://definedcrowd.recruitee.com/o/ux-designer-porto'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/ux-designer-porto'>
       UX Designer - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -392,7 +392,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Nexity/743999692113916-gestionnaire-gerance-baux-commerciaux-h-f-cdi'>Nexity GESTIONNAIRE GERANCE BAUX COMMERCIAUX H/F CDI | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nexity/743999692113916-gestionnaire-gerance-baux-commerciaux-h-f-cdi'>Nexity GESTIONNAIRE GERANCE BAUX COMMERCIAUX H/F CDI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
